--- a/package.json
+++ b/package.json
@@ -18,15 +18,33 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm:migration:generate": "ts-node --transpile-only ./node_modules/typeorm/cli.js migration:generate -n",
+    "typeorm:migration:create": "typeorm migration:create -n",
+    "typeorm:migration:run": "npm run build && typeorm migration:run",
+    "typeorm:migration:revert": "npm run build && typeorm migration:revert"
   },
+  "pre-commit": [
+    "test",
+    "lint",
+    "format"
+  ],
   "dependencies": {
     "@nestjs/common": "^9.0.11",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.11",
+    "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.0.5",
+    "@nestjs/typeorm": "^9.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.6"
+    "rxjs": "^7.5.6",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
