--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.6",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
